<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EACE"
    android:backgroundTint="#F1EACE"
    tools:context=".LimitPicker">

    <NumberPicker
        android:id="@+id/PickerLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/customframe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/PickerHigh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/LowTempCurrent"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/customframe"
        android:text="@string/limit_current_low"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SaveLow"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#38781D"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/limit_save"
        android:textColor="#F1EACE"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743" />

    <NumberPicker
        android:id="@+id/PickerHigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/customframe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PickerLow"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/HighTempCurrent"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/customframe"
        android:text="@string/limit_current_high"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/HomeButton"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#38781D"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/limit_home"
        android:textColor="#F1EACE"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

    <TextView
        android:id="@+id/LowLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limit_low"
        android:textColor="#38781D"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/PickerLow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877" />

    <TextView
        android:id="@+id/HighLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limit_high"
        android:textColor="#38781D"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/PickerHigh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toEndOf="@+id/LowLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.874" />

</androidx.constraintlayout.widget.ConstraintLayout>