<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="#F1EACE"
    android:backgroundTint="#F1EACE"
    tools:context=".PasswChange">

    <ScrollView
        android:id="@+id/change_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/changeForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/newPassField"
                android:layout_width="310dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:background="@drawable/customframe"
                android:hint="@string/pass_new_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1" />

            <EditText
                android:id="@+id/PassCheck"
                android:layout_width="310dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:background="@drawable/customframe"
                android:hint="@string/pass_new_password_again"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1" />

            <TextView
                android:id="@+id/status"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginTop="18dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/SaveButton"
                style="?android:textAppearanceSmall"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"

                android:backgroundTint="#38781D"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/pass_save"
                android:textColor="#F1EACE"
                android:textStyle="bold"
                app:cornerRadius="100dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/HomeButton"
                style="?android:textAppearanceSmall"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"

                android:backgroundTint="#38781D"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/pass_home"
                android:textColor="#F1EACE"
                android:textStyle="bold"
                app:cornerRadius="100dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>